--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,15 @@
     <artifactId>ranking-plugin</artifactId>
     <packaging>atlassian-plugin</packaging>
 
-    <name>Like Plugin</name>
+    <name>"Like" Plugin</name>
     <version>0.1.1</version>
     <url>http://www.unic.com/</url>
     <description><![CDATA[
         Provides a macro for ranking pages with a 'Like' style approach, tracking only positive answers.
 
         Provides a macro for listing the top ranked pages within a space based on the positive answers over the last 30 days.
+
+		Is based on the Adaptavis "Ranking" plugin (http://www.adaptavist.com/).
     ]]></description>
 
     <properties>
@@ -28,9 +30,9 @@
 
     <developers>
         <developer>
-            <name>Dan Hardiker</name>
-            <organization>Adaptavist.com Ltd</organization>
-            <organizationUrl>http://www.adaptavist.com/</organizationUrl>
+            <name>Johann Richard</name>
+            <organization>Unic AG</organization>
+            <organizationUrl>http://www.unic.com/</organizationUrl>
             <roles>
                 <role>Lead Developer</role>
             </roles>
