--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
     <artifactId>ranking-plugin</artifactId>
     <packaging>atlassian-plugin</packaging>
 
-    <name>"Like" Plugin</name>
-    <version>0.1.1</version>
+    <name>Like Plugin</name>
+    <version>0.2.0</version>
     <url>http://www.unic.com/</url>
     <description><![CDATA[
         Provides a macro for ranking pages with a 'Like' style approach, tracking only positive answers.
