--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
     <packaging>atlassian-plugin</packaging>
 
     <name>Like Plugin</name>
-    <version>0.2.4</version>
-    <url>http://www.unic.com/</url>
+    <version>0.3.0</version>
+    <url>https://github.com/johannrichard/Confluence-Like</url>
     <description><![CDATA[
-        Provides a macro for ranking pages with a 'Like' style approach, tracking  positive and negative answers.
+        Provides a macro for ranking pages with a 'Like' style approach, tracking positive and negative answers.
 
         Provides a macro for listing the top ranked pages within a space based on the positive answers over the last 30 days.
 
@@ -20,19 +20,17 @@
 
     <properties>
         <!-- The plugin key. This will be injected into the atlassian-plugins.xml file when built. -->
-        <atlassian.plugin.key>com.unic.confluence.like</atlassian.plugin.key>
+        <atlassian.plugin.key>org.mycvs.confluence.like</atlassian.plugin.key>
     </properties>
 
     <organization>
-        <name>Unic AG</name>
-        <url>http://www.unic.com/</url>
+        <name>Johann Richard</name>
+        <url>http://about.me/johannrichard</url>
     </organization>
 
     <developers>
         <developer>
             <name>Johann Richard</name>
-            <organization>Unic AG</organization>
-            <organizationUrl>http://www.unic.com/</organizationUrl>
             <roles>
                 <role>Lead Developer</role>
             </roles>
